# geocom

./: .gitmodules  LICENSE  README.md  map.cpp  pyproject.toml  test.html
IrisBuzz/: package-lock.json  package.json
IrisBuzz/src/: App.tsx  main.tsx
IrisBuzz/src/_auth/: AuthLayout.tsx
IrisBuzz/src/_auth/forms/: SigninForm.tsx  SignupForm.tsx
IrisBuzz/src/_root/: RootLayout.tsx
IrisBuzz/src/_root/pages/: Home.tsx
IrisBuzz/src/context/: AuthContext.tsx
IrisBuzz/src/types/: index.ts
api/: .prettierrc  deno.json  example.json  main.ts  pathfinding  pathfinding.d.ts  test.json
api/migrations/: migration_001.sql
app/: filtered.json  geofilter.js  nitk surathkal.geo.json  nitk-roads.json  nitk.geo.json  package-lock.json  package.json  tsconfig.json
app/app/: _layout.tsx  index.tsx  map.tsx  modal.tsx
app/app/(tabs)/: index.tsx  map.json  map_topo.json  two.tsx
app/components/: MapIndicators.tsx  animated-polyline.tsx  animation.json  search-modal.tsx  search-results.tsx  select.tsx
app/types/: pathfinding-animation.ts  shapes.ts
app/utils/: distance.ts  rotation.ts
docs/: pdfSourceIN.html
docs/Writerside/: in.tree  redirection-rules.xml
docs/Writerside/topics/: Maps.md  Overview.md  communication-system.md
graph/: astar.py  gen.py
pathfinding/: .gitignore  CMakeLists.txt  astar.cpp  astar.h  bind.cpp  bind.h  edge.cpp  edge.h  finaldata.json  graph.h  graph.tpp  heap.h  heap.tpp  main.cpp  migration_001.sql  node.cpp  node.h  node_visitor.h  pathfinding  pathfinding.cpp  pathfinding.h  pathfinding.js  pathfinding.tpp  pathfinding.wasm  utils.cpp  utils.h
(+11 files in other folders)
