[tool.poetry]
name = "geocom"
version = "0.1.0"
description = ""
authors = ["Agnirudra Sil <agnirudra.sil@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
networkx = {extras = ["default"], version = "^3.4"}
matplotlib = "^3.9.2"
geojson = "^3.1.0"
shapely = "^2.0.6"
pyvis = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
